WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114483
TimeRanges::nearest() returns incorrect results.
https://bugs.webkit.org/show_bug.cgi?id=114483
Summary
TimeRanges::nearest() returns incorrect results.
Jer Noble
Reported
2013-04-11 17:35:30 PDT
TimeRanges::nearest() returns incorrect results.
Attachments
Patch
(9.75 KB, patch)
2013-04-11 17:42 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(11.26 KB, patch)
2013-04-11 21:53 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(12.69 KB, patch)
2013-04-11 22:45 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(12.69 KB, patch)
2013-04-11 23:55 PDT
,
Jer Noble
eric.carlson
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-04-11 17:36:27 PDT
"TimeRanges [1,2] -> nearest(0)" will return "0".
Jer Noble
Comment 2
2013-04-11 17:42:39 PDT
Created
attachment 197704
[details]
Patch
Build Bot
Comment 3
2013-04-11 18:08:29 PDT
Comment on
attachment 197704
[details]
Patch
Attachment 197704
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/105048
Jer Noble
Comment 4
2013-04-11 21:53:18 PDT
Created
attachment 197714
[details]
Patch Fixed windows build errors by adding symbols needed by WebCoreTestSupport to exports list.
Jer Noble
Comment 5
2013-04-11 22:45:57 PDT
Created
attachment 197716
[details]
Patch Added missing symbols to GTK build system.
Jer Noble
Comment 6
2013-04-11 23:55:45 PDT
Created
attachment 197723
[details]
Patch Now with more semicolons!
Eric Carlson
Comment 7
2013-04-12 09:53:57 PDT
Comment on
attachment 197723
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197723&action=review
> Source/WebCore/testing/Internals.cpp:2149 > + unsigned count = std::min(startTimes->length(), endTimes->length());
std::min() is unnecessary because you ASSERT above if the lengths are different.
Build Bot
Comment 8
2013-04-12 10:33:44 PDT
Comment on
attachment 197723
[details]
Patch
Attachment 197723
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/131087
Jer Noble
Comment 9
2013-04-12 10:56:52 PDT
Committed
r148288
: <
http://trac.webkit.org/changeset/148288
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug